projects/pong/index.css
@font-face{
  font-family:'digital-clock-font';
  src: url('/projects/pong/assets/digital-7/digital-7-(mono).ttf');
}

body {
  background-color: darkgreen;
  display: flex;
}

.board {
  width: 750px;
  height: 480px;
  border: 1px solid white;
  background-color: black;
  position: relative;
}

.gameItem {
  /* positioning */
  position: absolute;
}

.paddles {
  /* appearance */
  width: 20px;
  height: 80px;
  border-radius: 5px;
}

#paddleLeft {
  /* appearance */
  background-color: cyan;
  box-shadow: 0px 0px 0px 3px teal inset;

  /* positioning */
  left: 50px;
  top: 180px;
}

#paddleRight {
  /* appearance */
  background-color: hotpink;
  box-shadow: 0px 0px 0px 3px maroon inset;

  /* positioning */
  left: 630px;
  top: 180px;
}

.balls {
  /* appearance */
  width: 20px;
  height: 20px;
  border-radius: 10px;
  background-color: fuchsia;
  text-align: center;
  
  /* positioning */
  left: 340px;
  top: 210px;
}

.ballPit {
  background-color: red;
}

#ball {
  /* appearance */
  width: 20px;
  height: 20px;
  border-radius: 10px;
  background-color: fuchsia;
  
  /* positioning */
  left: 340px;
  top: 210px;
}

/* #cheatIcon {
    width: 50px;
    height: 50px;
    border-radius: 30px;
    background-color: darkgrey;
    border-style: solid;
    border-color: grey;
    border-width: 4px;

    left: 10px;
    top: 10px;
} */

.scoreboard {
  /* appearance */
  background-color: black;
  width: 650px;
  height: 40px;
  border-radius: 5px;
  border: 2px solid black;

  /* positioning */
  left: 50px;
  top: 10px;
  position: relative;
}

.scores {
  color: white;
  font-family: "Comic Sans MS";
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
  font-size: 15px;
  padding-left: 10px;
  padding-right: 10px;
  position: static;
  column-span: 7;
}

.scores span {
  font-family:"digital-clock-font";
}

#p1 {
  /* positioning */
  text-align: left;
}

#bounces {
  /* positioning */
  text-align: center;
}

#p2 {
  /* positioning */
  text-align: right;
}

.tallyMark {
  padding-top: 20px;
}

.p1TallyMark {
  background-color: darkblue;
}

.p2TallyMark {
  background-color: maroon;
}

.winTallyMark {
  background-color: limegreen;
}

.speeds {
  font-family: "Comic Sans MS";
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
  list-style-type: none;
  padding: 0;
  display: block;
}
            
/* Cheat Mode Interface */
.content {
  flex: 1;
  padding: 15px;
}

.dashboard {
  background-color: #333;
  margin-left: 40px;
  width: auto;
  position: relative;
  border: 1px solid white;
  border-radius: 10px;
}

.relay {
  position: block;
  display: flex;
  margin: 15px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.relay p {
  position: inline;
  color: white;
  font-size: 15pt;
  margin-top: 25px;
  margin-bottom: 25px;
  margin-left: 20px;
  margin-right: 20px;
  font-family: 'Courier New', Courier, monospace;
}
.on {
  background-color: rgb(0, 100, 0);
}

.off {
  background-color: rgb(100, 0, 0);
}

button {
  height: 60px;
  width: 60px;
  border-radius: 100%;
  /* margin-right: 15px; */
  /* border-width: 2px;
  border-color: black;
  border-style: solid;   */
  border: none;
  cursor: pointer;
  outline: none;

  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */

  background-color: rgb(225, 0, 225);
  box-shadow: 0px 10px;
}

button:hover {
  background-color: rgb(200, 0, 200)
}

button:active {
  background-color: rgb(160, 0, 160);
  box-shadow: 0px 4px;
  transform: translateY(6px);
}

button.activated {
  color: rgb(0, 165, 0);
  background-color: rgb(0, 255, 0);
}

button.activated:hover {
  color: rgb(0, 110, 0);
  background-color: rgb(0, 200, 0);
}

button.activated:active {
  color: rgb(0, 70, 0);
  background-color: rgb(0, 160, 0);
}

button.deactivated {
  color: rgb(165, 0, 0);
  background-color: rgb(255, 0, 0);
}

button.deactivated:hover {
  color: rgb(110, 0, 0);
  background-color: rgb(200, 0, 0);
}

button.deactivated:active {
  color: rgb(70, 0, 0);
  background-color: rgb(160, 0, 0);
}

button.disabled {
  color: rgb(83, 83, 83);
  background-color: rgb(128, 128, 128);
}

button.disabled:hover {
  color: rgb(83, 83, 83);
  background-color: rgb(128, 128, 128);
}

button.disabled:active {
  color: rgb(83, 83, 83);
  background-color: grey;
}

#ballCount {
  /* position: relative; */
  /* display: block; */
  margin-top: auto;
  margin-bottom: auto;
  height: 40px; /*40px*/
  width: 50px;
  border-radius: 20%;
  font-family: 'Comic Sans MS';
  /* font-family:'Courier New', Courier, monospace; */
  text-align: center;
  font-size: 15pt;
  border: none;
}

div#label {
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 10px;
}

.multiBall label {
  position: relative;
  /* display: block; */
  color: white;
  font-size: 12pt;
  font-family: 'Courier New', Courier, monospace;
}
  
#confirmBallCount {
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 10px;
  height: 30px;
  width: 30px;
  border-radius: 20%;
  border: none;
  /* font-family:'Courier New', Courier, monospace; */
  font-family: 'Comic Sans MS';
  font-size: 12pt;
  background-color: rgb(0, 255, 0);
  box-shadow: 0px 3px rgb(0, 165, 0);
  /* color: rgb(0, 165, 0); */
}

#confirmBallCount:hover {
  box-shadow: 0px 3px rgb(0, 110, 0);
  background-color: rgb(0, 200, 0);
}

#confirmBallCount:active {
  background-color: rgb(0, 160, 0);
  box-shadow: 0px 1px rgb(0, 70, 0);
  transform: translateY(2px);
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
  margin-top: auto;
  margin-bottom: auto;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: cyan;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: blue;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: hotpink;
}

input:checked + .slider:before {
  background-color: maroon;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.slider.deactivated {
  background-color: rgb(141, 226, 226);
}

.slider.deactivated:before {
  background-color: rgb(116, 116, 216);
}

input:checked + .slider.deactivated {
  background-color: rgb(219, 149, 184);
}

input:checked + .slider.deactivated:before {
  background-color: rgb(161, 64, 64);
}

.slider.disabled {
  background-color: lightgrey;
}

.slider.disabled:before {
  background-color: grey;
}

input:checked + .slider.disabled {
  background-color: lightgrey;
}

input:checked + .slider.disabled:before {
  background-color: grey;
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

#attribution {
  position: fixed;
  bottom: 0;
  left: 0;
  border: 3px solid #91d335;
  background-color: rgb(3, 175, 3);
}

#attribution p {
  margin: 7px;
  color: black;
  font-family: "Comic Sans MS";
}

